Page MenuHome GnuPG

successive runs of `gpg-agent --enable-ssh-support` kills the $SSH_AUTH_SOCK file
Closed, ResolvedPublic

Description

Running twice gpg-agent does not hurt on the gpg side (socket/pid are preserved).
But when ssh-agent support is enabled, running gpg-agent twice makes the ssh
socket file disappear (although env-file still provides a SSH_AGENT_PID= line)

Example:
$ eval $(gpg-agent --daemon --enable-ssh-support --write-env-file ~/.gpg-agent-info)
$ ls -l $SSH_AUTH_SOCK
srwxr-xr-x 1 me me 0 Feb 15 19:59 /home/me/.gnupg/S.gpg-agent.ssh
$ eval $(gpg-agent --daemon --enable-ssh-support --write-env-file ~/.gpg-agent-info)
gpg-agent[3491]: a gpg-agent is already running - not starting a new one
$ ls -l $SSH_AUTH_SOCK
No such file or directory

(granted that gpg-agent 2.0.26 seems old)

Details

Version
2.0.26

Event Timeline

drzraf set Version to 2.0.26.
drzraf added a subscriber: drzraf.

I could reproduce this with gnupg-2.0.29. I will have a look.