agent: Do not remove the ssh socket.

* agent/gpg-agent.c (create_server_socket): Also inhibit the removal
of the ssh socket if another agent process is already running.

GnuPG modern is not affected.

GnuPG-bug-id: 2258
Signed-off-by: Justus Winter <justus@g10code.com>